Changelog for GEMC
==================

3/1/16
 - added 100 segments lines per circle when inspecting a detector
 - fixed strip identification for bst routine

2/29/16
 - removed obsolete cpp materials
 - added button to write single volumes or all volumes to WRL

2/9/16
 - added muPairProd to the map of processes in the output
 - added buttons to export a detector or the whole root in gdml format
 - added button to inspect detector in a new window
 - added buttons to print screenshots in png EPS format

2/7/16
 - added cerenkov to the map of processes in the output
 - better description for some true information variables
 - added dInelastic in the map of processes in the output
 - htcc pmt material had a refraction index that caused infinite
   bouncing of optical photons between the pmt glass limits!
 - correction: fixing bouncing of photons by limiting the
   number of steps to 100. Notice there are rarely above 20 steps
   for CC detectors.

2/2/16
 - making doxygen more happy
 - changing caching of the maps to 1 meter by default. This should be an option.
 - making step sizes explicit in field routine

2/1/16
 - Process names replaced with process ID in MHit. A map of names to process ID is in place and documented.
   The list of process may not contain all - a log is printed on screen if a process does not have an ID - so they can be added later on.
 - changed changelog for better formatting in documentation. Also, the previous log (up to 2008) will be added later.

1/22/16
 - forcing all volumes to be solids when doing slices. This seems to solve all slice-related problems, probably
   due to a mix of wireframe / solid volumes.

1/12/16
 - changed ftot ccdb connection to reader instead of writer

12/22/15
 - added injector bubble hit process routine
 - better log output for luminosity option

12/14/15
 - fixed typo in description of INTEGRATEDDGT option
 - Luminosity particle properties are now the same for every particle in the beam bunch.